using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;

public class Document : MonoBehaviour 
{
	#region Fields

	// Static

	// Public
	public Image face;
	public Text Id;
	public new Text name;
	public Text surname;
	public Text birthdate;
	public Text birthplace;
	public Text country;
	
	// Hidden Public
	
	// Private

	// Properties

	// Components

	// Events

	#endregion

	#region Unity Callbacks

	private void Start ()
	{

	}
	
	private void Update () 
	{
		
	}

	#endregion

	#region Methods

	#endregion

}