using UnityEngine;

[CreateAssetMenu(fileName = "NewDailyList", menuName = "ScriptableObjects/DailyList")]
public class DailyQueue : ScriptableObject 
{
	#region Fields

	// Public
	public Person[] queue;

	#endregion

	#region Unity Callbacks

	#endregion

	#region Methods

	#endregion

}